# takos-mobile

./: .gitignore  README.md  index.html  package.json  tsconfig.json  vite.config.ts
.github/workflows/: mobile-native-preflight.yml
.reuse/: dep5
release/: mobile-release-evidence.example.json
scripts/: check-mobile-preflight-source-ref.mjs
src/: agent-tasks.ts  apps.ts  chat.ts  home.ts  main.tsx  memory.ts  mobile-push.ts  native.ts  notifications.ts  product.ts  push.ts  styles.css
src-tauri/: Cargo.toml  Info.ios.plist  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/plugins/keystore/: Cargo.toml  README.md  build.rs
src-tauri/plugins/keystore/android/: build.gradle.kts  proguard-rules.pro
src-tauri/plugins/keystore/android/src/main/java/: KeystorePlugin.kt
src-tauri/plugins/keystore/ios/: Package.swift
src-tauri/plugins/keystore/ios/Sources/: KeystorePlugin.swift
src-tauri/plugins/keystore/permissions/: default.toml
src-tauri/plugins/keystore/src/: commands.rs  lib.rs  mobile.rs  models.rs
src-tauri/plugins/mobile-push/: Cargo.toml  README.md  build.rs
src-tauri/plugins/mobile-push/android/: build.gradle.kts  proguard-rules.pro  settings.gradle
src-tauri/plugins/mobile-push/android/src/main/: AndroidManifest.xml
src-tauri/plugins/mobile-push/android/src/main/java/: MobilePushPlugin.kt  MobilePushRuntime.kt  TakosFirebaseMessagingService.kt
src-tauri/plugins/mobile-push/ios/: Package.swift
src-tauri/plugins/mobile-push/ios/Sources/: MobilePushPlugin.swift
src-tauri/plugins/mobile-push/permissions/: default.toml
src-tauri/plugins/mobile-push/src/: commands.rs  lib.rs  mobile.rs  models.rs
src-tauri/src/: lib.rs  main.rs
tests/: home.test.ts  mobile-push.test.ts  preflight-source-ref.test.ts  product.test.ts
